--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
                 <a class="navbar-brand" href="#">Kevin Salgado's Dev Profile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="pages/cumbie-super-duper-awesome-side-project.html">Cumbie's Super Duper Awesome Side Project</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" target="_blank" href="https://github.com/barrycumbie/cumbie-summer-2021">See the Code</a>
             </li>
             <li class="nav-item">
@@ -59,7 +56,7 @@
             <div class="col-md-6 mx-auto tab-content">
                 <div class="tab-pane active container-fluid card" id="dev-stuff">
 
-                    <img class="card-img-top" src="img/itchy-robot.jpg" alt="Itchy Robot">
+                    <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwHJf50PuGpUxTYFRpEXjSHrFAYqFln4LqRQ&usqp=CAU" alt="Itchy Robot">
                     <div class="card-body">
 
                         <h4 class="card-title"> Links to Web Dev Stuff
@@ -67,25 +64,25 @@
                         <p class="card-text">Here are some useful links that I use for Web Dev Stuff</p>
 
                         <ul>
-                            <li> <a href="https://gist.github.com/barrycumbie/855332ee4a50ffd4cb48fd12aacdf7fa" target="_blank" class="card-link">Gist of Dev Profile in JSON </a></li>
-                            <li> <a href="https://gist.github.com/barrycumbie/e50b5a9fe12e5d4203f2e006ec748ff6" target="_blank" class="card-link">CIS 376 Class Gist</a></li>
+                            <li> <a href="https://www.w3schools.com/html/html_formatting.asp" target="_blank" class="card-link">HTML Text Formatting </a></li>
+                            <li> <a href="https://www.w3schools.com/bootstrap4/bootstrap_dropdowns.asp" target="_blank" class="card-link">BS4 Dropdowns</a></li>
 
 
 
-                            <li> <a href="https://gist.github.com/barrycumbie/e50b5a9fe12e5d4203f2e006ec748ff6#gistcomment-3772921" target="_blank" class="card-link">CIS 376 Dev 02 Assignment Instructions</a></li>
+                            <li> <a href="https://gist.github.com/barrycumbie/e50b5a9fe12e5d4203f2e006ec748ff6#gistcomment-3772921" target="_blank" class="card-link"> </a></li>
 
-                            <li> <a href="https://gist.github.com/barrycumbie/e50b5a9fe12e5d4203f2e006ec748ff6#gistcomment-3798457" target="_blank" class="card-link">CIS 376 Final Project Part 1 (of 2) Instructions</a></li>
+                            <li> <a href="https://gist.github.com/barrycumbie/e50b5a9fe12e5d4203f2e006ec748ff6#gistcomment-3798457" target="_blank" class="card-link"> </a></li>
 
-                            <li> <a href="https://www.w3schools.com/bootstrap4/bootstrap_cards.asp" target="_blank" class="card-link">W3C BS4 Cards</a></li>
+                            <li> <a href="https://www.w3schools.com/bootstrap4/bootstrap_cards.asp" target="_blank" class="card-link"> </a></li>
 
-                            <li> <a href="https://www.w3schools.com/bootstrap4/bootstrap_ref_js_tab.asp" target="_blank" class="card-link">W3C BS4 Tabs</a></li>
-
-
+                            <li> <a href="https://www.w3schools.com/bootstrap4/bootstrap_ref_js_tab.asp" target="_blank" class="card-link"> </a></li>
 
 
-                            <li> <a href="https://frinkiac.com" target="_blank" class="card-link">frinkiac</a></li>
 
-                            <li> <a href="https://www.justwatch.com" target="_blank" class="card-link">just watch tv</a></li>
+
+                            <li> <a href="https://frinkiac.com" target="_blank" class="card-link"> </a></li>
+
+                            <li> <a href="https://www.justwatch.com" target="_blank" class="card-link"> </a></li>
                         </ul>
 
                     </div>
