--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a class="navbar-brand" href="#">Kevin Salgado's Dev Profile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" target="_blank" href="https://github.com/barrycumbie/cumbie-summer-2021">See the Code</a>
+                <a class="nav-link" target="_blank" href="https://github.com/KBrian5/fluffy-guide">See the Code</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" target="_blank" href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fbarrycumbie.github.io%2Fcumbie-summer-2021%2Findex.html">Check this page's validity</a>
@@ -52,12 +52,14 @@
             </div>
         </div>
 
+       
         <div class="row">
             <div class="col-md-6 mx-auto tab-content">
                 <div class="tab-pane active container-fluid card" id="dev-stuff">
 
-                    <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwHJf50PuGpUxTYFRpEXjSHrFAYqFln4LqRQ&usqp=CAU" alt="Itchy Robot">
+                    <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwHJf50PuGpUxTYFRpEXjSHrFAYqFln4LqRQ&usqp=CAU" alt="Mike Character">
                     <div class="card-body">
+                        <span class="overlay-text">My super text.</span>
 
                         <h4 class="card-title"> Links to Web Dev Stuff
                         </h4>
@@ -69,7 +71,7 @@
 
 
 
-                            <li> <a href="https://gist.github.com/barrycumbie/e50b5a9fe12e5d4203f2e006ec748ff6#gistcomment-3772921" target="_blank" class="card-link"> </a></li>
+                            <li> <a href="https://www.w3schools.com/html/html_images.asp" target="_blank" class="card-link">HTML Images</a></li>
 
                             <li> <a href="https://gist.github.com/barrycumbie/e50b5a9fe12e5d4203f2e006ec748ff6#gistcomment-3798457" target="_blank" class="card-link"> </a></li>
 
@@ -93,8 +95,11 @@
                         <div class="card-body">
                             <h4 class="card-title">My Profile
                               </h4>
-                            <p class="card-text">Here are some useful links that I use for Web Dev Stuff</p>
+                               <a href="https://www.w3schools.com/html/html_formatting.asp" target="_blank" class="card-link">Link to my Linkedin! </a>
+                            <p class="card-text">Here are a few fun facts about me!</p>
                             <p id="dev-profile-data" class="card-text">
+                                
+
 
                             </p>
 
