--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a class="nav-link active" target="_blank" href="https://gist.github.com/barrycumbie/b7ed5ce56858cf383ab22ddd73e26c78">Foxtrot Story Card</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" target="_blank" href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fbarrycumbie.github.io%2Fcumbie-summer-2021%2Findex.html">Check this page's validity</a>
+                <a class="nav-link active" target="_blank" href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fkbrian5.github.io%2Ffluffy-guide%2F">Check this page's validity</a>
             </li>
             
             
